fix: add dark mode

--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -47,7 +47,7 @@
 }
 
 .gridBox {
-  border: 1px solid var(--white);
+  border: 1px solid var(--black);
   padding: 20px;
   border-radius: 10px;
   position: relative;
