--- a/src/components/common/HorizontalCardList/styles.module.scss
+++ b/src/components/common/HorizontalCardList/styles.module.scss
@@ -21,7 +21,7 @@
   height: 600px;
   // background-color: var(--light-gray);
   background-image: var(--card-color-gradient);
-  border: 1px solid var(--white);
+  border: 1px solid var(--black);
   overflow: hidden;
   position: relative;
   padding: 20px;
